* Tue Jun 2 2020 Chris Smeele <c.j.smeele@uu.nl> - 4.2.8_1.5.0-1
- Added support for read-only ticket-based access (disabled by default)
- Support merging config from overlapping Apache Location/If sections
- Documentation amended with advanced configuration examples (tickets and per-user configuration)
- Now supports iRODS 4.2.8 client libraries

* Fri Dec 20 2019 Chris Smeele <c.j.smeele@uu.nl> - 4.2.7_1.4.2-1
- Now supports iRODS 4.2.7 client libraries

* Sun Jun 23 2019 Chris Smeele <c.j.smeele@uu.nl> - 4.2.6_1.4.2-1
- Now supports iRODS 4.2.6 client libraries

* Wed Apr 03 2019 Chris Smeele <c.j.smeele@uu.nl> - 4.2.5_1.4.2-1
- Now supports iRODS 4.2.5 client libraries

* Mon Dec 17 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.4_1.4.2-1
- Fixed DavrodsExposedRoot config being ignored in some builds
- Added a Content-Disposition configuration setting (off by default)
- Fixed a URL encoding issue for relative paths in directory listings

* Sun Jul 15 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.3_1.4.1-1
- Improved robustness of connection reuse

* Wed Jul 11 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.3_1.4.0-1
- Now supports iRODS 4.2.3 client libraries

* Mon Mar 26 2018 Chris Smeele <c.j.smeele@uu.nl> - 4.2.2_1.4.0-1
- Added Range header support (partial downloads)
- Added support for auto-installs and packaging on Debian-based distros
- Now supports iRODS 4.2.2 client libraries

* Fri Sep 8 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.3.0-1
- Added support for themed listings
- Fixed: Error in path handling when ExposedRoot is '/'
- Fixed: Listing HTML links were not always correct when Location was not '/'.

* Mon Aug 7 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.2.0-1
- Added an anonymous access mode

* Tue Jul 19 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2.1_1.1.1-1
- Changed build system to CMake
- Now supports iRODS 4.2.1 client libraries

* Tue Jul 18 2017 Chris Smeele <c.j.smeele@uu.nl> - 4.2_1.1.1-2